# Arbitrage-Prediction-Bot

./: .coverage  .env  .gitignore  ANALYSIS_SUMMARY.md  DISCOVERY_SESSION.md  EXTENDED_ANALYSIS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAPPING_SYSTEM.md  Makefile  README.md  TESTING_RESULTS.md  analysis_results.txt  check_status.sh  env.example  pm_arb.db  pyproject.toml
artifacts/: equity_20251006_204345.csv  trades_20251006_204345.csv
data/: quotes_2025-10-06_1417.parquet  quotes_2025-10-06_1420.parquet  quotes_2025-10-06_1421.parquet  quotes_dual.parquet  quotes_dual_final.parquet  quotes_dual_test.parquet  quotes_sample.parquet  sample_data.csv  sample_quotes.csv  test_quotes.parquet
docker/: Dockerfile  compose.yml
scripts/: __init__.py  backtest_cli.py  build_pairs.py  doctor.py  doctor.py.save  manage_mappings.py  mapping_coverage_report.py  monitor_and_analyze.py  overlap_report.py  run_discovery.py
src/: __init__.py
src/connectors/: __init__.py  base.py  kalshi.py  polymarket.py
src/core/: __init__.py  backtest.py  config.py  discovery.py  event_registry.py  execution.py  fees.py  health.py  live.py  matcher.py  odds.py  paper.py  persistence.py  portfolio.py  risk.py  sizing.py  types.py  venue_mappers.py
src/match/: __init__.py  candidates.py  canonical.py  canonical_exact.py  exact_search.py  features.py  score.py
src/pm_arb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: __init__.py  backtest_cli.py  doctor.py  run_discovery.py  run_live.py  run_paper.py
tests/: __init__.py  test_event_mapping.py  test_matcher.py  test_odds.py
